# IAcquaBotSim

./: CMakeLists.txt  README.md  package.xml
iacquabot/: CMakeLists.txt  package.xml
iacquabot/launch/: no_gui_control.launch  pos_control.launch  sandisland.launch  tray_control.launch  vel_control.launch
iacquabot/scripts/Basic_controllers/: cmd_vel_republisher.py  position_republisher.py
iacquabot/scripts/Basic_system/: cmd_update.py
iacquabot/scripts/examples/: trayectory.py  view_position.py  view_trayectory.py
iacquabot/src/: position_controller.cpp  trayectory_controller.cpp  velocity_controller.cpp
launch/: sandisland.launch
submodules/usv_description/: CMakeLists.txt  package.xml
submodules/usv_description/urdf/: wamv_base.urdf.xacro
submodules/usv_gazebo/: CMakeLists.txt  package.xml
submodules/usv_gazebo/urdf/components/: wamv_3d_lidar.xacro
submodules/usv_gazebo/urdf/thruster_layouts/: wamv_aft_thrusters.xacro
usv_description/urdf/: wamv_base.urdf.xacro
usv_description/urdf/thrusters/: engine.xacro
usv_gazebo/launch/: rviz_vrx.launch
usv_gazebo/urdf/dynamics/: wamv_gazebo_dynamics_plugin.xacro
usv_gazebo/urdf/thruster_layouts/: wamv_gazebo_thruster_config.xacro
