<package format="2">
  <name>IAcquaBotSim</name>
  <version>0.1.0</version>
  <description>Simulador para USV</description>
  <maintainer email="tu_email@example.com">Tu Nombre</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>rospy</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>gazebo_ros</depend>
<build_depend>xacro</build_depend>
<exec_depend>xacro</exec_depend>
</package>
