<?xml version="1.0"?>
<package format="2">
  <name>IAcquaBotSim</name>
  <version>0.0.1</version>
  <description>The IAcquaBotSim package</description>

  <maintainer email="you@example.com">Your Name</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>usv_description</build_depend>
  <build_depend>usv_gazebo</build_depend>
  <exec_depend>usv_description</exec_depend>
  <exec_depend>usv_gazebo</exec_depend>
  <depend>rospy</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>gazebo_ros</depend>
<build_depend>xacro</build_depend>
<exec_depend>xacro</exec_depend>

  <export>
  </export>
</package>
